[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/GameLogic/SprintSkill.gd" type="Script" id=1]

[node name="SprintSkill" type="Node2D"]
script = ExtResource( 1 )

[node name="SprintDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SprintMovementTween" type="Tween" parent="."]
